name:                oanda-rest-api
version:             0.1.0.0
synopsis:            Client to the OANDA REST API
description:         Client to the OANDA REST API
homepage:            http://github.com/jdreaver/oanda-rest-api
license:             BSD3
license-file:        LICENSE
author:              John David Reaver
maintainer:          johndreaver@gmail.com
copyright:           (c) 2015-2016 John David Reaver
category:            API
build-type:          Simple
stability:           experimental
extra-source-files:  README.md
                   , CHANGES.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     OANDA
                     , OANDA.Accounts
                     , OANDA.Orders
                     , OANDA.Positions
                     , OANDA.Rates
                     , OANDA.Trades
                     , OANDA.Transactions
                     , OANDA.Types
  other-modules:       OANDA.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.8.0
                     , bytestring >= 0.10.0
                     , containers >= 0.5.2
                     , Decimal >= 0.4.2
                     , lens >= 4.0
                     , old-locale >= 1.0.0.6
                     , scientific >= 0.3.3.0
                     , text >= 1.2.0
                     , time >= 1.4
                     , vector >= 0.10.0
                     , wreq >= 0.3.0.0
  default-language:    Haskell2010


test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base >=4 && <5
                    , aeson >= 0.8.0
                    , bytestring >= 0.10.0
                    , containers >= 0.5.2
                    , Decimal >= 0.4.2
                    , lens >= 4.0
                    , old-locale >= 1.0.0.6
                    , scientific >= 0.3.3.0
                    , text >= 1.2.0
                    , time >= 1.4
                    , vector >= 0.10.0
                    , wreq >= 0.3.0.0

                    , hspec ==2.*
                    , HUnit -any
    default-language: Haskell2010
    hs-source-dirs:   src tests
    ghc-prof-options: -prof -fprof-auto
    ghc-options:      -Wall


test-suite style
    type:             exitcode-stdio-1.0
    main-is:          HLint.hs
    build-depends:    base -any
                    , hlint ==1.*
    default-language: Haskell2010
    hs-source-dirs:   tests
    ghc-options:      -Wall


source-repository head
  type:     git
  location: https://github.com/jdreaver/oanda-rest-api
